[package]
name = "ckb"
version = "0.201.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
build = "build.rs"
description = "CKB is the layer 1 of Nervos Network, a public/permissionless blockchain."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"
rust-version = "1.85.0"

[build-dependencies]
ckb-build-info.workspace = true

[dependencies]
ckb-build-info.workspace = true
ckb-bin.workspace = true
console-subscriber = { workspace = true, optional = true }

[dev-dependencies]

[workspace]
# To get a list sorted by dependencies, run devtools/ci/check-cyclic-dependencies.py
members = [
    "util",
    "util/occupied-capacity/core",
    "util/channel",
    "util/systemtime",
    "util/fixed-hash/core",
    "util/build-info",
    "util/logger",
    "util/logger-config",
    "util/metrics-config",
    "util/hash",
    "util/rational",
    "benches",
    "db-schema",
    "util/spawn",
    "util/occupied-capacity/macros",
    "util/fixed-hash/macros",
    "util/logger-service",
    "util/runtime",
    "util/stop-handler",
    "util/metrics",
    "util/metrics-service",
    "util/fixed-hash",
    "util/occupied-capacity",
    "util/crypto",
    "util/constant",
    "error",
    "util/multisig",
    "util/gen-types",
    "util/migrate/migration-template",
    "util/types",
    "util/jsonrpc-types",
    "freezer",
    "resource",
    "pow",
    "util/dao/utils",
    "traits",
    "spec",
    "util/fee-estimator",
    "util/proposal-table",
    "script",
    "util/app-config",
    "db",
    "network",
    "miner",
    "notify",
    "util/memory-tracker",
    "db-migration",
    "util/network-alert",
    "store",
    "util/indexer-sync",
    "util/indexer",
    "util/rich-indexer",
    "util/chain-iter",
    "util/dao",
    "util/test-chain-utils",
    "util/reward-calculator",
    "util/snapshot",
    "util/migrate",
    "verification/traits",
    "verification",
    "verification/contextual",
    "tx-pool",
    "shared",
    "block-filter",
    "chain",
    "sync",
    "util/instrument",
    "rpc",
    "util/light-client-protocol-server",
    "util/launcher",
    "devtools/doc/rpc-gen",
    "ckb-bin",
]

[workspace.dependencies]
tempfile = "3"
itertools = "0.11.0"
# issue tracking: https://github.com/GREsau/schemars/pull/251
schemars = { package = "ckb_schemars", version="0.8.22" }
anyhow = "1.0.34"
arc-swap = "1.3"
async-stream = "0.3.3"
async-trait = "0.1"
axum = "0.7"
backtrace = "0.3"
base64 = "0.21.0"
bit-vec = "0.6.3"
bitflags = "1.0"
blake2b-ref = "0.3"
bloom-filters = "0.1"
bs58 = "0.5.0"
byteorder = "1.3.1"
bytes = "1"
cfg-if = "1.0"
ckb-app-config = { path = "util/app-config" }
ckb-async-runtime = { path = "util/runtime" }
ckb-bin = { path = "ckb-bin" }
ckb-block-filter = { path = "block-filter" }
ckb-build-info = { path = "util/build-info" }
ckb-chain = { path = "chain" }
ckb-chain-iter = { path = "util/chain-iter" }
ckb-chain-spec = { path = "spec" }
ckb-channel = { path = "util/channel" }
ckb-constant = { path = "util/constant" }
ckb-crypto = { path = "util/crypto" }
ckb-dao = { path = "util/dao" }
ckb-dao-utils = { path = "util/dao/utils" }
ckb-db = { path = "db" }
ckb-db-migration = { path = "db-migration" }
ckb-db-schema = { path = "db-schema" }
ckb-error = { path = "error" }
ckb-fee-estimator = { path = "util/fee-estimator" }
ckb-fixed-hash = { path = "util/fixed-hash" }
ckb-fixed-hash-core = { path = "util/fixed-hash/core" }
ckb-fixed-hash-macros = { path = "util/fixed-hash/macros" }
ckb-freezer = { path = "freezer" }
ckb-gen-types = { path = "util/gen-types" }
ckb-hash = { path = "util/hash", default-features = false }
ckb-indexer = { path = "util/indexer" }
ckb-indexer-sync = { path = "util/indexer-sync" }
ckb-instrument = { path = "util/instrument" }
ckb-jsonrpc-types = { path = "util/jsonrpc-types" }
ckb-launcher = { path = "util/launcher" }
ckb-light-client-protocol-server = { path = "util/light-client-protocol-server" }
ckb-logger = { path = "util/logger" }
ckb-logger-config = { path = "util/logger-config" }
ckb-logger-service = { path = "util/logger-service" }
ckb-memory-tracker = { path = "util/memory-tracker" }
ckb-merkle-mountain-range = "0.5.2"
ckb-metrics = { path = "util/metrics" }
ckb-metrics-config = { path = "util/metrics-config" }
ckb-metrics-service = { path = "util/metrics-service" }
ckb-migrate = { path = "util/migrate" }
ckb-migration-template = { path = "util/migrate/migration-template" }
ckb-miner = { path = "miner" }
ckb-multisig = { path = "util/multisig" }
ckb-network = { path = "network" }
ckb-network-alert = { path = "util/network-alert" }
ckb-notify = { path = "notify" }
ckb-occupied-capacity = { path = "util/occupied-capacity" }
ckb-occupied-capacity-core = { path = "util/occupied-capacity/core" }
ckb-occupied-capacity-macros = { path = "util/occupied-capacity/macros" }
ckb-pow = { path = "pow" }
ckb-proposal-table = { path = "util/proposal-table" }
ckb-rational = { path = "util/rational" }
ckb-resource = { path = "resource" }
ckb-reward-calculator = { path = "util/reward-calculator" }
ckb-rich-indexer = { path = "util/rich-indexer" }
ckb-rpc = { path = "rpc" }
ckb-script = { path = "script" }
ckb-shared = { path = "shared" }
ckb-snapshot = { path = "util/snapshot" }
ckb-spawn = { path = "util/spawn" }
ckb-stop-handler = { path = "util/stop-handler" }
ckb-store = { path = "store" }
ckb-sync = { path = "sync" }
ckb-system-scripts = "=0.5.4"
ckb-systemtime = { path = "util/systemtime" }
ckb-test-chain-utils = { path = "util/test-chain-utils" }
ckb-traits = { path = "traits" }
ckb-tx-pool = { path = "tx-pool" }
ckb-types = { path = "util/types" }
ckb-util = { path = "util" }
ckb-verification = { path = "verification" }
ckb-verification-contextual = { path = "verification/contextual" }
ckb-verification-traits = { path = "verification/traits" }
ckb-vm = { version = "=0.24.13", default-features = false }
clap = "=4.4"
console = ">=0.9.1, <1.0.0"
console-subscriber = "0.4.0"
criterion = "0.5"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.1"
ctrlc = "3.1"
daggy = "0.8.0"
dashmap = "4.0"
derive_more = { version = "1", default-features = false }
eaglesong = "0.1"
env_logger = "0.10"
fail = "0.4"
faster-hex = "0.6"
faux = "0.1"
fdlimit = "0.2.1"
fs2 = "0.4.3"
futures = "0.3"
futures-util = "0.3.21"
golomb-coded-set = "0.2.0"
governor = "0.3.1"
hex = "0.4"
hickory-resolver = "0.24.2"
http-body-util = "0.1"
hyper = "1"
hyper-tls = "0.6"
hyper-util = "0.1"
include_dir = "0.7"
includedir = "0.6.0"
includedir_codegen = "0.6.0"
indicatif = "0.16"
ipnetwork = "0.20"
is-terminal = "0.4.7"
is_sorted = "0.1.1"
jsonrpc-core = "18.0"
jsonrpc-utils = "0.3"
keyed_priority_queue = "0.3"
libc = "0.2"
linked-hash-map = "0.5"
log = "0.4"
lru = "0.7.1"
memchr = "2.7"
merkle-cbt = "0.3"
minstant = "0.1.4"
molecule = { version = "0.8.0", default-features = false }
multi_index_map = "0.6.0"
multiaddr = "0.3.0"
num-bigint = "0.4"
num_cpus = "1.16.0"
numext-fixed-uint = "0.1"
p2p = { version = "0.6.2", default-features = false }
parking_lot = "0.12"
paste = "1.0"
path-clean = "0.1.0"
phf = "0.8.0"
pretty_assertions = "1.3.0"
proc-macro2 = "1.0"
prometheus = "0.13.3"
prometheus-static-metric = "0.5.1"
proptest = "1.0"
quote = "1.0"
rand = "0.8.5"
rand_distr = "0.4"
rayon = "1.0"
regex = "1.1.6"
reqwest = "0.12"
rhai = "1.16.0"
rocksdb = { version = "=0.21.1", default-features = false }
rustc-hash = "1.1"
secio = "0.6"
secp256k1 = "0.30"
semver = "1.0"
sentry = "0.34.0"
serde = "1.0"
serde_plain = "0.3.0"
slab = "0.4"
sled = "0.34.7"
snap = "1"
sql-builder = "3.1"
sqlx = "0.8.2"
tera = "1"
thiserror = "1.0.22"
time = "0.3.36"
tiny-keccak = "2.0"
tokio = "1.35.0"
tokio-util = "0.7.8"
toml = "0.5"
tower-http = "0.6"
ubyte = "0.10"
url = "2.2.2"
walkdir = "2.1.4"
yansi = "0.5"

[profile.release]
overflow-checks = true

[profile.release.build-override]
opt-level = 3

[profile.bench.build-override]
opt-level = 3

[profile.prod]
inherits = "release"
lto = true
codegen-units = 1

[target.'cfg(all(not(target_env = "msvc"), not(target_os="macos")))'.dependencies]
tikv-jemallocator = { version = "0.5.0", features = [
    "unprefixed_malloc_on_supported_platforms",
] }

[features]
default = []
deadlock_detection = ["ckb-bin/deadlock_detection"]
with_sentry = ["ckb-bin/with_sentry"]
with_dns_seeding = ["ckb-bin/with_dns_seeding"]
profiling = ["tikv-jemallocator/profiling", "ckb-bin/profiling"]
portable = ["ckb-bin/portable"]
march-native = ["ckb-bin/march-native"]
tokio-trace = ["console-subscriber"]
