[package]
name = "ckb-benches"
version = "0.110.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "CKB benchmarks."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]


[dev-dependencies]
criterion = "0.4"
ckb-chain = { path = "../chain", version = "= 0.110.0" }
ckb-types = { path = "../util/types", version = "= 0.110.0" }
ckb-shared = { path = "../shared", version = "= 0.110.0" }
ckb-store = { path = "../store", version = "= 0.110.0" }
ckb-chain-spec = { path = "../spec", version = "= 0.110.0" }
rand = "0.7"
ckb-hash = {path = "../util/hash", version = "= 0.110.0"}
ckb-test-chain-utils = { path = "../util/test-chain-utils", version = "= 0.110.0" }
ckb-dao-utils = { path = "../util/dao/utils", version = "= 0.110.0" }
ckb-dao = { path = "../util/dao", version = "= 0.110.0" }
ckb-system-scripts = { version = "= 0.5.4" }
lazy_static = "1.3.0"
ckb-crypto = { path = "../util/crypto", version = "= 0.110.0" }
ckb-jsonrpc-types = { path = "../util/jsonrpc-types", version = "= 0.110.0" }
ckb-verification = { path = "../verification", version = "= 0.110.0" }
ckb-verification-traits = { path = "../verification/traits", version = "= 0.110.0" }
ckb-app-config = { path = "../util/app-config", version = "= 0.110.0" }
ckb-resource = { path = "../resource", version = "= 0.110.0" }
ckb-network = { path = "../network", version = "= 0.110.0" }
ckb-launcher = { path = "../util/launcher", version = "= 0.110.0" }
tempfile.workspace = true

[[bench]]
name = "bench_main"
harness = false

[features]
default = []
ci = []
portable = ["ckb-store/portable", "ckb-chain/portable"]
march-native = ["ckb-store/march-native", "ckb-chain/march-native"]
