[package]
name = "ckb-benches"
version = "0.201.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
description = "CKB benchmarks."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]


[dev-dependencies]
criterion = { workspace = true }
ckb-chain = { workspace = true }
ckb-types = { workspace = true }
ckb-shared = { workspace = true }
ckb-store = { workspace = true }
ckb-chain-spec = { workspace = true }
rand = { workspace = true }
ckb-hash = { workspace = true }
ckb-test-chain-utils = { workspace = true }
ckb-dao-utils = { workspace = true }
ckb-dao = { workspace = true }
ckb-system-scripts = { workspace = true }
ckb-crypto = { workspace = true }
ckb-jsonrpc-types = { workspace = true }
ckb-verification = { workspace = true }
ckb-verification-traits = { workspace = true }
ckb-app-config = { workspace = true }
ckb-resource = { workspace = true }
ckb-network = { workspace = true }
tempfile.workspace = true

[[bench]]
name = "bench_main"
harness = false

[features]
default = []
ci = []
portable = ["ckb-store/portable", "ckb-chain/portable"]
march-native = ["ckb-store/march-native", "ckb-chain/march-native"]
