[package]
name = "ckb-block-filter"
version = "0.111.0-rc8"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "Create block filter data for client-side filtering"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-store = { path = "../store", version = "= 0.111.0-rc8" }
ckb-shared = { path = "../shared", version = "= 0.111.0-rc8" }
ckb-logger = { path = "../util/logger", version = "= 0.111.0-rc8" }
ckb-types = { path = "../util/types", version = "= 0.111.0-rc8" }
ckb-stop-handler = { path = "../util/stop-handler", version = "= 0.111.0-rc8" }
ckb-async-runtime = { path = "../util/runtime", version = "= 0.111.0-rc8" }
